--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = R-fGarch
-url = https://cran.r-project.org/src/contrib/fGarch_3042.83.1.tar.gz
+url = https://cran.r-project.org/src/contrib/fGarch_3042.83.2.tar.gz
 archives = 
 giturl = 
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
